--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
     <header>
         <h1 class="display-4" style="color: #3498db; font-size: 120px;">Megabytes Leganés</h1>
-        <h2 class="lead" style="font-size: 60px;">hola hola holaTu tienda de reparación de ordenadores de confianza HOLA</h2>
+        <h2 class="lead" style="font-size: 60px;">Tu tienda de reparación de ordenadores de confianzaaaaaaaa </h2>
         <img src="logo.jpg" class="img-fluid" alt="Tienda Megabytes Leganés">
         <p id="ip-display" style="font-size: 40px; color: #fff;">Cargando IP...</p>
     </header>
