--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Megabytess Leganés - Reparación de Ordenadores</title>
+    <title>Megabytes Leganés - Reparación de Ordenadores</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
@@ -43,6 +43,7 @@
 
         section {
             padding: 20px;
+            margin-bottom: 20px;
         }
 
         footer {
@@ -56,11 +57,69 @@
         }
 
         img {
-            width: 200px;
             max-width: 100%;
-            height: 100px;
+            height: auto;
             display: block;
             margin: 20px auto;
+        }
+
+        .social-icons {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .social-icons img {
+            width: 40px;
+            margin: 0 10px;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .social-icons img:hover {
+            transform: scale(1.2);
+        }
+
+        .contact-form {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact-form label {
+            font-weight: bold;
+        }
+
+        .contact-form input[type="text"],
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form textarea {
+            resize: none;
+            height: 150px;
+        }
+
+        .contact-form input[type="submit"] {
+            background-color: #2c3e50;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .contact-form input[type="submit"]:hover {
+            background-color: #34495e;
+        }
+
+        #map {
+            height: 400px;
+            width: 100%;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -68,7 +127,7 @@
     <header>
         <h1 class="display-4" style="color: #3498db;">Megabytes Leganés</h1>
         <p class="lead">Tu tienda de reparación de ordenadores de confianza</p>
-        <img src="logo.jpg" class="img-fluid" alt="Tienda Megabytes Leganés">
+        <img src="logo.jpg" alt="Tienda Megabytes Leganés">
     </header>
 
     <nav class="navbar navbar-dark bg-dark">
@@ -91,20 +150,43 @@
 
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Estamos ubicados en Leganés. ¡Contáctanos para obtener ayuda con tus problemas informáticos!</p>
-            <address>
-                Dirección: Calle Ejemplo, 123<br>
-                Teléfono: 123-456-789<br>
-                Correo Electrónico: info@megabytesleganes.com
-            </address>
+            <div class="row">
+                <div class="col-md-6">
+                    <p>Estamos ubicados en Leganés. ¡Contáctanos para obtener ayuda con tus problemas informáticos!</p>
+                    <address>
+                        Dirección: Calle Ejemplo, 123<br>
+                        Teléfono: 123-456-789<br>
+                        Correo Electrónico: info@megabytesleganes.com
+                    </address>
+                    <div class="social-icons">
+                        <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                        <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div id="map"></div>
+                </div>
+            </div>
+            <div class="contact-form">
+                <h3>Formulario de Contacto</h3>
+                <form action="#" method="post">
+                    <div class="form-group">
+                        <label for="name">Nombre:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Correo Electrónico:</label>
+                        <input type="text" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Mensaje:</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
+                    <input type="submit" value="Enviar Mensaje">
+                </form>
+            </div>
         </section>
-
-        <section id="ubicacion">
-            <h2>Ubicación</h2>
-            <p>Nuestra tienda se encuentra en una ubicación conveniente en Leganés. ¡Visítanos!</p>
-        </section>
-
-       
     </div>
 
     <footer class="bg-dark text-white">
@@ -116,5 +198,15 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        // Inicializar el mapa
+        function initMap() {
+            var leganes = {lat: 40.3326, lng: -3.7704};
+            var map = new google.maps.Map(
+                document.getElementById('map'), {zoom: 15, center: leganes});
+            var marker = new google.maps.Marker({position: leganes, map: map});
+        }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
 </body>
 </html>
